# ci-cd-pipeline

./: .gitignore  .pre-commit-config.yaml  Dockerfile  ci-cd-pipeline.groovy  deploy.groovy  docker-compose.yaml  pyproject.toml
src/: app.py
tests/: test_main.py
