[project]
name = "ci-cd-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.139.0",
    "pytest>=9.1.1",
    "pytest-mock>=3.15.1",
]

[dependency-groups]
dev = [
    "mypy>=2.2.0",
    "pre-commit>=4.6.0",
    "rich>=15.0.0",
]
